fix card text overflow

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -86,7 +86,7 @@ nav .brand-logo {
 }
 
 .card.small .card-content {
-  max-height: none;
+  max-height: 200px;
 }
 
 .progress {
